# python-batch

./: README.md
.devcontainer/: devcontainer.json
.devcontainer/docker/: Dockerfile  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml
.devcontainer/enviroment/: development.env
python-app/: README.md  makefile  pyproject.toml
python-app/python_app/_common/: properties.py
python-app/python_app/_common/batch/: batch_processor.py
python-app/python_app/sample/: app.py  main.py
python-app/tests/sample/: test_app.py
